# dataflow_old

./: .gitmodules  CMakeLists.txt  README.md
cmake/: gflags.cmake  glog.cmake  proto2cpp.cmake  third_party.cmake
dataflow/base/: class_register.h
dataflow/core/: main.cc
dataflow/core/base/: CMakeLists.txt  thread.h
dataflow/core/graph/: CMakeLists.txt  graph_viz.h  main.cc  proto_parse.cc  proto_parse.h  udf_graph.cc
dataflow/core/ops/: operator.cc
dataflow/core/proto/: CMakeLists.txt  dataflow.proto  dataflow_complete.proto
dataflow/models/: googlenet_model_complete.prototxt
